--- a/style.css
+++ b/style.css
@@ -2,11 +2,75 @@
   height: 300px;
 }
 .header_logo {
-  background-color: greenyellow;
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  flex-wrap: nowrap;
+}
+
+a {
+  text-decoration: none;
+}
+
+body {
+  font-family: "Poppins", sans-serif;
+}
+
+.wrapper {
+  max-width: 1440px;
+  margin: 0 auto;
+}
+
+.container {
+  margin: 0 auto;
+  max-width: 1210px;
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
+
+.header {
+  padding-top: 4rem;
+}
+.header_inner {
   display: flex;
   align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
+  justify-content: space-between;
+  flex-wrap: nowrap;
+}
+.header_menu-list {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  flex-wrap: nowrap;
+}
+.header_menu-item {
+  margin-left: 5rem;
+}
+.header_menu-item:last-child {
+  margin-left: 5rem;
+}
+.header_menu-link {
+  font-size: 1.6rem;
+  color: #1a2b5f;
+  transition: color 0.25s linear, border 0.25s linear;
+}
+.header_menu-link:hover {
+  color: #ffc87a;
+}
+.header_menu-login {
+  padding: 1.5rem 2.5rem;
+  display: inline-block;
+  border: 1px solid;
+  border-radius: 2.5rem;
+}
+
+.logo {
+  font-size: 2rem;
+  font-weight: 600;
+  color: #1a2b5f;
+}
+.logo_text {
+  color: #ffc87a;
 }
 
 /*# sourceMappingURL=style.css.map */
