--- a/style.css
+++ b/style.css
@@ -14,6 +14,8 @@ a {
 
 body {
   font-family: "Poppins", sans-serif;
+  color: #1a2b5f;
+  line-height: 1.4;
 }
 
 .wrapper {
@@ -58,7 +60,7 @@ body {
   color: #ffc87a;
 }
 .header_menu-login {
-  padding: 1.5rem 2.5rem;
+  padding: 1rem 2rem;
   display: inline-block;
   border: 1px solid;
   border-radius: 2.5rem;
@@ -71,6 +73,51 @@ body {
 }
 .logo_text {
   color: #ffc87a;
+}
+
+.banner {
+  padding-top: 1.5rem;
+  max-width: 80rem;
+  margin: 0 auto;
+  text-align: center;
+}
+.banner_heading {
+  font-weight: 700;
+  font-size: 6rem;
+  margin-bottom: 2rem;
+}
+.banner_desc {
+  font-size: 1.8rem;
+  font-weight: 300;
+  margin-bottom: 4rem;
+}
+.banner_buttons {
+  display: flex;
+  justify-content: center;
+  align-items: stretch;
+}
+.banner_buttons .btn {
+  margin: 0 1rem;
+}
+
+.btn {
+  cursor: pointer;
+  outline: none;
+  font-size: 1.6rem;
+  text-align: center;
+  color: #1a2b5f;
+  padding: 1rem 2rem;
+  display: inline-block;
+  background-color: transparent;
+}
+.btn--border {
+  border: 1px solid currentColor;
+}
+.btn--rounded {
+  border-radius: 5rem;
+}
+.btn--primary {
+  background-color: #ffc87a;
 }
 
 /*# sourceMappingURL=style.css.map */
