--- a/style.scss
+++ b/style.scss
@@ -19,6 +19,8 @@ a {
 
 body {
     font-family: "Poppins", sans-serif;
+    color: $text-color;
+    line-height: 1.4;
 }
 .wrapper {
     max-width: 1440px;
@@ -54,7 +56,7 @@ body {
             }
         }
         &-login{
-            padding: 1.5rem 2.5rem;
+            padding: 1rem 2rem;
             display: inline-block;
             border: 1px solid;
             border-radius: 2.5rem;
@@ -67,5 +69,48 @@ body {
     color: $text-color;
     &_text{
         color: $primary-color;
+    }
+}
+.banner{
+    padding-top: 1.5rem;
+    max-width: 80rem;
+    margin: 0 auto;
+    text-align: center;
+    &_heading{
+        font-weight:700;
+        font-size:6rem;
+        margin-bottom: 2rem;
+    }
+    &_desc{
+        font-size: 1.8rem;
+        font-weight: 300;
+        margin-bottom: 4rem;
+    }
+    &_buttons{
+        display: flex;
+        justify-content: center;
+        align-items: stretch;
+        .btn{
+            margin: 0 1rem;
+        }
+    }
+}
+.btn{
+    cursor: pointer;
+    outline: none;
+    font-size: 1.6rem;
+    text-align: center;
+    color: $text-color;
+    padding: 1rem 2rem;
+    display: inline-block;
+    background-color: transparent;
+    &--border{
+        border: 1px solid currentColor;
+    }
+    &--rounded{
+        border-radius: 5rem;
+    }
+    &--primary{
+        background-color: $primary-color;
     }
 }
